[project]
name = "ghauri"
version = "1.4.3"
description = "An advanced SQL injection detection & exploitation tool."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "chardet>=5.2.0",
    "colorama>=0.4.6",
    "nuitka>=2.8.9",
    "requests>=2.32.5",
    "tldextract>=5.3.1",
    "ua-generator>=2.0.20",
]
